--- a/package.json
+++ b/package.json
@@ -1,24 +1,39 @@
 {
-  "name": "resume",
+  "name": "web",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@mui/material": "^5.8.2",
+    "@mantine/core": "^4.2.10",
+    "@mantine/dates": "^4.2.10",
+    "@mantine/dropzone": "^4.2.10",
+    "@mantine/form": "^4.2.10",
+    "@mantine/hooks": "^4.2.10",
+    "@mantine/modals": "^4.2.10",
+    "@mantine/notifications": "^4.2.10",
+    "@mantine/prism": "^4.2.10",
+    "@mantine/rte": "^4.2.10",
+    "@mantine/spotlight": "^4.2.10",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.38",
-    "@types/react": "^18.0.12",
-    "@types/react-dom": "^18.0.5",
+    "axios": "^0.27.2",
+    "dayjs": "^1.11.3",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "tabler-icons-react": "^1.51.0",
     "typescript": "^4.7.3",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "@types/jest": "^27.5.2",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/node": "^16.11.38",
+    "@types/react": "^18.0.12",
+    "@types/react-dom": "^18.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
