--- a/package.json
+++ b/package.json
@@ -3,21 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@mantine/core": "^4.2.10",
-    "@mantine/dates": "^4.2.10",
-    "@mantine/dropzone": "^4.2.10",
-    "@mantine/form": "^4.2.10",
-    "@mantine/hooks": "^4.2.10",
-    "@mantine/modals": "^4.2.10",
-    "@mantine/notifications": "^4.2.10",
-    "@mantine/prism": "^4.2.10",
-    "@mantine/rte": "^4.2.10",
-    "@mantine/spotlight": "^4.2.10",
+    "@emotion/react": "^11.10.0",
+    "@mantine/carousel": "^5.1.6",
+    "@mantine/core": "^5.1.6",
+    "@mantine/dates": "^5.1.6",
+    "@mantine/dropzone": "^5.1.6",
+    "@mantine/form": "^5.1.6",
+    "@mantine/hooks": "^5.1.6",
+    "@mantine/modals": "^5.1.6",
+    "@mantine/notifications": "^5.1.6",
+    "@mantine/nprogress": "^5.1.6",
+    "@mantine/prism": "^5.1.6",
+    "@mantine/rte": "^5.1.6",
+    "@mantine/spotlight": "^5.1.6",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
-    "dayjs": "^1.11.3",
+    "dayjs": "^1.11.5",
+    "embla-carousel-react": "^7.0.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.1.0",
