--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-scripts": "5.0.1",
     "tabler-icons-react": "^1.51.0",
     "typescript": "^4.7.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "postversion": "git push --tags && git push && echo \"Successfully pushed!\""
   },
   "devDependencies": {
     "@types/jest": "^27.5.2",
