--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "react-scripts": "5.0.1",
     "tabler-icons-react": "^1.51.0",
     "typescript": "^4.7.3",
-    "web-vitals": "^2.1.4",
-    "postversion": "git push --tags && git push && echo \"Successfully pushed!\""
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@types/jest": "^27.5.2",
@@ -44,7 +43,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postversion": "git push --tags && git push && echo \"Successfully pushed!\""
   },
   "eslintConfig": {
     "extends": [
