--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,4 +24,5 @@ jobs:
                   script: |
                     cd ${{ secrets.FOLDER }}
                     git pull
+                    yarn install
                     yarn build
