--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
         volumes:
             - .:/app
             - /app/node_modules
-        command: serve public/
+        command: serve -s build
         ports:
             - "3000:3000"
 networks:
