--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,8 @@ jobs:
                   script_stop: true
                   script: |
                       cd ${{ secrets.FOLDER_STAGE }}
+					  > .env
+					  echo DOCKER_PORT=${{ secrets.DOCKER_PORT_STAGE }}
                       git pull
                       yarn install
                       yarn build
@@ -45,6 +47,8 @@ jobs:
                   script_stop: true
                   script: |
                       cd ${{ secrets.FOLDER }}
+					  > .env
+					  echo DOCKER_PORT=${{ secrets.DOCKER_PORT }}
                       git pull
                       yarn install
                       yarn build
