--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,6 @@ services:
             - /app/node_modules
         command: serve -s build
         ports:
-            - "3000:3000"
+            - "3000:${DOCKER_PORT}"
 networks:
     back:
