--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,7 @@ jobs:
                       cd ${{ secrets.FOLDER }}
                       > .env
                       echo DOCKER_PORT=${{ secrets.DOCKER_PORT }} > .env
+                      echo DOCKER_STATE=prod > .env
                       git pull
                       yarn install
                       yarn build
