--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,8 @@ jobs:
                   script: |
                       cd ${{ secrets.FOLDER }}
                       > .env
-                      echo DOCKER_PORT=${{ secrets.DOCKER_PORT }} > .env
-                      echo DOCKER_STATE=prod > .env
+                      echo DOCKER_PORT=${{ secrets.DOCKER_PORT }} >> .env
+                      echo DOCKER_STATE=prod >> .env
                       git pull
                       yarn install
                       yarn build
