--- a/.github/workflows/stage-ci.yml
+++ b/.github/workflows/stage-ci.yml
@@ -24,8 +24,8 @@ jobs:
                   script: |
                       cd ${{ secrets.FOLDER_STAGE }}
                       > .env
-                      echo DOCKER_PORT=${{ secrets.DOCKER_PORT_STAGE }} > .env
-                      echo DOCKER_STATE=stage > .env
+                      echo DOCKER_PORT=${{ secrets.DOCKER_PORT_STAGE }} >> .env
+                      echo DOCKER_STATE=stage >> .env
                       git pull
                       yarn install
                       yarn build
