--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.7'
 
 services:
     app:
-        container_name: jourlay_web_${DOCKER_STATE}
+        container_name: frontend
         build:
             context: .
         volumes:
